--- a/index.html
+++ b/index.html
@@ -40,19 +40,13 @@
 			<h1>HOT or COLD</h1>
 		</header>
 		<section class="game"> <!-- Guessing Section -->
-
-			<h2 class="feedback">Make your Guess!</h2>
-
+			<h2 class="feedback">The Magic Number is Set. Guess it!</h2>
 			<form>
 				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" required/>
-      			<input type="submit" id="guessButton" class="button" name="submit" value="Guess"/>
+  			<input type="submit" id="guessButton" class="button" name="submit" value="Guess"/>
 			</form>
-
-      		<p>Guess # <span id="count">0</span></p>
-
-			<ul id="guessList" class="guessBox clearfix">
-
-			</ul>
+      <p>Guess # <span id="count">0</span></p>
+			<ul id="guessList" class="guessBox clearfix"></ul>
 		</section>
 		<!-- JavaScript -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
